<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    android:gravity="center" 
    android:orientation="vertical" 
    android:background="@color/main_red" 
    android:padding="@dimen/pad_20dp" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    
   <!--  <ImageView 
        android:id="@+id/imageView1" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_marginBottom="@dimen/pad_30dp" 
        android:src="@drawable/login_logo" /> -->
    
    <EditText 
        android:id="@+id/editText1" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:hint="@string/email" 
        style="@style/edittext">
        <requestFocus />
    </EditText>
    <EditText 
        android:id="@+id/editText2" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_marginTop="@dimen/pad_10dp" 
        android:hint="@string/password" 
        android:inputType="textPassword" 
        style="@style/edittext" />
    
    <Button 
        android:textSize="@dimen/txt_16sp" 
        android:textColor="@color/white" 
        android:id="@+id/btnLogin" 
        android:background="@drawable/login_btn" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_marginTop="@dimen/pad_30dp" 
        android:text="@string/login" 
        style="@style/btn" />
    
    <Button 
        android:id="@+id/btnForget" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_marginTop="@dimen/pad_20dp" 
        android:text="@string/forget_pwd" 
        style="@style/btn_main_red_lt" />
    
    <ImageView 
        android:id="@+id/imageView2" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_marginTop="@dimen/pad_10dp" 
        android:src="@drawable/or_separator" />
    
    <Button 
        android:id="@+id/btnReg" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_marginTop="@dimen/pad_10dp" 
        android:text="@string/sign_up" 
        style="@style/btn_main_red_lt" />
    
</LinearLayout>